@@ -850,6 +850,14 @@ class Universe(object):
                     n_residues=self._topology.n_residues,
                     n_segments=self._topology.n_segments,
                     values=values)
+        alias_pairs = [("bfactors", "tempfactors"), ("tempfactors", "bfactors")]
+        for a, b in alias_pairs:
+            if topologyattr.attrname ==  a and hasattr(self._topology, b):
+                warnings.warn(f"You are adding {a} to a Universe that "
+                              f"has {b}. From MDAnalysis version 2.0, {a} "
+                              f"and {b} will no longer be separate "
+                              "TopologyAttrs. Instead, they will be aliases "
+                              "of the same attribute.", DeprecationWarning)
         self._topology.add_TopologyAttr(topologyattr)
         self._process_attr(topologyattr)
 
